ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/ia_Engagement_Value__c.object-meta.xml
<CustomObject>
    <description>Created for users to be able to create value story details</description>
    <label>Engagement Value</label>
    <nameField>
        <displayFormat>EV-{00000}</displayFormat>
        <label>Engagement Value</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>