ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Business_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Business_Challenge__c</fullName>
    <label>Business Challenge</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>