ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <formula>Value_Driver__r.Business_Impact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Impact</label>
    <type>Text</type>
</CustomField>