ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <label>Business Priority</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>