ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Business_Value_Driver__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Driver__c</fullName>
    <formula>Value_Driver__r.Business_Value_Driver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Value Driver</label>
    <type>Text</type>
</CustomField>