ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>ia_Engagement__c</referenceTo>
    <relationshipLabel>Engagement Values</relationshipLabel>
    <relationshipName>Engagement_Value</relationshipName>
    <type>Lookup</type>
</CustomField>