ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Engagement_Value_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Value_External_Id__c</fullName>
    <description>External id format is Value_Driver__c + Engagement__c</description>
    <externalId>true</externalId>
    <inlineHelpText>External id format is Value_Driver__c + Engagement__c</inlineHelpText>
    <label>Engagement Value External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>