ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value Achieved</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>