ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/fields/Value_Driver__c.field-meta.xml
<CustomField>
    <fullName>Value_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value Driver</label>
    <referenceTo>Business_Priorities__c</referenceTo>
    <relationshipLabel>Engagement Values</relationshipLabel>
    <relationshipName>Engagement_Values</relationshipName>
    <type>Lookup</type>
</CustomField>