ConsultingHub/force-app/main/default/objects/ia_Engagement_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>